-
Bug
-
Resolution: Done
-
P2: Important
-
5.13.0
-
20555210e74c67de028dfcca1559e9839e626c76 (qt/qtwebengine/5.13)
To reproduce, run attached application. Then press button 1 to tell webengine to load youtube, once loaded press button 2 to change the profile. Instead of reloading youtube, it will reload the first address (google.com).
For Gerrit Dashboard: QTBUG-77977 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
272584,4 | Fix invalid url on profile change | 5.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |