Fix invalid url on profile change

If adapter is initialized use always active url.

Fixes: QTBUG-77977
Change-Id: Ie8d4ec7d7c703322cef50d26931cce2b130dcf34
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>