src/webengine/api/qquickwebengineview.cpp
@@ -1119,9 +1119,7 @@ void QQuickWebEngineViewPrivate::updateAdapter()
     adapter->setClient(this);
     if (wasInitialized) {
         if (!m_html.isEmpty())
-            adapter->setContent(m_html.toUtf8(), defaultMimeType, m_url);
-        else if (m_url.isValid())
-            adapter->load(m_url);
+            adapter->setContent(m_html.toUtf8(), defaultMimeType, activeUrl);
         else if (activeUrl.isValid())
             adapter->load(activeUrl);
         else
